fixed img overflow error

--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ body{
     justify-content: center;
     align-items: center;
 }
+.img{
+    max-width: 100%;;
+    max-height: 100%;
+}
 #thing{
     font-size: 9rem;
 }
@@ -212,7 +216,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 6rem;
+    gap: 3rem;
 }
 #box2{
     height: 165px;
@@ -221,7 +225,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 6rem;
+    gap: 3rem;
 }
 #sun-rise{
     height: 165px;
@@ -231,6 +235,10 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 10rem;
+}
+.img{
+    max-width: 100%;;
+    max-height: 100%;
 }
 #sun-set{
     height: 165px;
@@ -306,7 +314,7 @@ body{
 }
 
 #ss{
-    height: 175px;
+    height: 200px;
     width: 91%;
     margin-left: 4%;
     display: flex;
@@ -387,27 +395,31 @@ body{
 }
 
 #ss{
-    height: 175px;
+    height: 200px;
     width: 91%;
     margin-bottom: 36px;
 }
 
 #box1{
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.1rem;
 }
 
 #box2{
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.1rem;
 }
 
 #sun-rise{
-    font-size: 6rem;
+    height: 120px;
+    width: 40%;
+    font-size: 1rem;
 }
 
 #sun-set{
-    font-size: 6rem;
+    height: 120px;
+    width: 40%;
+    font-size: 1rem;
 }
 
 #other{
